# EyeNav

./: .gitignore  LICENSE  README.md  requirement.txt
extension/: manifest.json
server/: pyproject.toml
server/src/: app.py
