[project]
name = "eyenav"
version = "0.1.0"
description = "Navigate your device effortlessly with your eyes"
authors = [
    {name = "Manasseh",email = "believemanasseh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
